# glifestream

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pylintrc  AUTHORS  Dockerfile  INSTALL  INSTALL.md  README  README.md  TODO  docker-compose.yml  glifestream.wsgi  manage.py  pyproject.toml  pytest.ini  requirements.txt  settings-sample.py  urls.py  worker.py  wsgi.py
.github/workflows/: docker-publish.yml  pr-checks.yml
apis/: __init__.py  delicious.py  digg.py  fb.py  flickr.py  friendfeed.py  gbuzz.py  greader.py  identica.py  lastfm.py  mail.py  picasaweb.py  selfposts.py  stumbleupon.py  twitter.py  vimeo.py  webfeed.py  yelp.py  youtube.py
auth/: forms.py  urls.py  views.py
auth/templates/: login.html  openid.html
bookmarklet/: urls.py  views.py
bookmarklet/templates/: bookmarklet.js  frame.html
conf/docker/: entrypoint.sh
conf/docker/etc/: supervisord.conf
filters/: expand.py  truncate.py  twyntax.py
gauth/: admin.py  gls_oauth.py  gls_openid.py  models.py  urls.py  views.py
gauth/templates/: login.html  openid.html
glifestream/: __init__.py  fetching.py  gls_staticfiles.py  settings-sample.py  settings.py  settings_magic_sso.py  settings_sample.py  urls.py  wsgi.py  wsgi.virtualenv.py
glifestream/apis/: __init__.py  atproto.py  base.py  delicious.py  digg.py  factory.py  fb.py  flickr.py  friendfeed.py  greader.py  identica.py  lastfm.py  mail.py  mastodon.py  modules.py  picasaweb.py  pixelfed.py  pocket.py  selfposts.py  stumbleupon.py  twitter.py  vimeo.py  webfeed.py  yelp.py  youtube.py
glifestream/bookmarklet/: urls.py  views.py
glifestream/bookmarklet/templates/: bookmarklet.js  frame.html
glifestream/filters/: __init__.py  expand.py  truncate.py  twyntax.py
glifestream/gauth/: admin.py  forms.py  gls_oauth.py  gls_oauth2.py  gls_openid.py  middleware.py  models.py  request_auth.py  urls.py  views.py
glifestream/gauth/migrations/: 0001_initial.py  0002_userprofile.py
glifestream/gauth/templates/: change_password.html  login.html  openid.html
glifestream/static/js/: glifestream.js
glifestream/static/themes/: _legacy-base.scss
glifestream/stream/: __init__.py  admin.py  index_view.py  media.py  models.py  pshb.py  typing.py  views.py  websub.py
glifestream/stream/fixtures/: initial_data.json
glifestream/stream/migrations/: 0001_initial.py  0002_reblog.py  0003_skip_reblogs.py  0004_websub.py  0005_alter_service_api.py  0006_alter_service_api.py  0007_fetch_worker.py  0008_servicefetchstate_outcome_timestamps.py
glifestream/stream/templatetags/: gls_filters.py  media.py  test_gls_filters.py
glifestream/templates/: base.html  i18n.html  stream-pure.html  stream.atom  stream.html  stream.json
glifestream/tests/: conftest.py  test_api.py  test_apis_atproto.py  test_apis_factory.py  test_apis_mastodon.py  test_apis_selfposts.py  test_apis_vimeo.py  test_apis_webfeed.py  test_apis_youtube.py  test_fetching.py  test_filters_expand.py  test_force_password_change.py  test_logout_behavior.py  test_management_seed_e2e.py  test_models.py  test_oauth.py  test_request_auth.py  test_settings_magic_sso.py  test_stream_media.py  test_templatetags_filters.py  test_usettings_views.py  test_utils_common.py  test_utils_html.py  test_utils_httpclient.py  test_utils_oembed.py  test_utils_slugify.py  test_utils_time.py  test_views_index.py  test_views_index_helpers.py  test_views_websub.py  test_worker_cli.py  test_worker_management_commands.py  test_worker_scheduler.py
glifestream/tests/e2e/: conftest.py  test_browser_flows.py  vrt.py
glifestream/testsupport/: magic_sso.py
glifestream/usettings/: common.py  forms.py  list_settings.py  oauth_settings.py  service_settings.py  urls.py  views.py  websub_settings.py
glifestream/usettings/templates/: lists.html  oauth.html  oauth2.html  oid.html  pshb.html  services.html  settings.html  status.html  tools.html  websub.html
glifestream/utils/: __init__.py  common.py  html.py  httpclient.py  oembed.py  slugify.py  time.py
glifestream/worker/: cli.py  config.py  daemon.py  init_files.py  maintenance.py  schedule.py
login/: forms.py  views.py
run/: settings_docker.py
scripts/: build-docker-platform.sh  build-docker-platforms.sh  build-docker.sh  vrt-docker.sh  vrt-make-settings.py  vrt.Dockerfile
scripts/migrate/: fix_thumbnails.py
static/: xd_receiver.html
static/js/: glifestream.js
stream/: __init__.py  admin.py  media.py  models.py  pshb.py  views.py
stream/fixtures/: initial_data.json
stream/templatetags/: gls_filters.py  media.py
templates/: base.html  i18n.html  stream-pure.html  stream.atom  stream.html  stream.json  tools.html
templates/registration/: login.html
usettings/: urls.py  views.py
usettings/templates/: oauth.html  oid.html  opml.xml  pshb.html  services.html  settings.html
utils/: __init__.py  common.py  html.py  httpclient.py  oembed.py  slugify.py  time.py  translate.py
(+25 files in other folders)
