[tool.poetry]
name = "glifestream"
version = "0.1.0"
description = "A free lifestream platform and social activity reader"
authors = ["WAP"]

[tool.poetry.dependencies]
beautifulsoup4 = "4.11.1"
Django = "^5.0.2"
django-pipeline = "^3.0.0"
feedparser = "^6.0"
libsasscompiler = "0.1.8"
Markdown = "^2.6"
Pillow = "^10.0"
python = "^3.11,<3.14"
requests-oauthlib = "^0.4"
uWSGI = "^2.0.21"
workerpool = "^0.9"
pymemcache = "^4.0.0"
atproto = "^0.0.59"

[tool.poetry.group.dev.dependencies]
django-stubs = {extras = ["compatible-mypy"], version = "^4.2.4"}
mypy = "1.5.1"
pylint = "3.0.1"
pytest = "7.1.2"
pytest-django = "^4.8.0"
types-beautifulsoup4 = {extras = ["compatible-mypy"], version = "^4.12.0.6"}
types-markdown = {extras = ["compatible-mypy"], version = "^3.5.0.0"}
types-oauthlib = {extras = ["compatible-mypy"], version = "^3.2.0.10"}
types-pillow = {extras = ["compatible-mypy"], version = "^10.0.0.3"}
types-requests = {extras = ["compatible-mypy"], version = "^2.31.0.9"}
types-requests-oauthlib = {extras = ["compatible-mypy"], version = "^1.3.0.1"}
pylint-django = "2.5.5"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "glifestream.settings"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
