[project]
name = "glifestream"
version = "0.1.0"
description = "A free lifestream platform and social activity reader"
authors = [{ name = "WAP" }]
requires-python = ">=3.11,<4,<3.15"
dependencies = [
    "beautifulsoup4>=4,<5",
    "django>=5,<6",
    "django-pipeline==4.1.0",
    "feedparser>=6.0,<7",
    "libsasscompiler==0.1.8",
    "markdown>=3,<4",
    "pillow>=12,<13",
    "requests-oauthlib==2.0.0",
    "gunicorn>=25,<26",
    "workerpool>=0.9,<0.10",
    "pymemcache>=4.0.0,<5",
    "atproto==0.0.65",
]

[dependency-groups]
dev = [
    "django-stubs[compatible-mypy]==6.0.2",
    "mypy>=1,<2",
    "playwright>=1.55,<2",
    "pytest>=9,<10",
    "pytest-cov>=6,<7",
    "pytest-django>=4,<5",
    "types-beautifulsoup4==4.12.0.20250516",
    "types-markdown==3.10.2.20260211",
    "types-oauthlib==3.3.0.20260324",
    "types-pillow==10.2.0.20240822",
    "types-requests==2.33.0.20260402",
    "types-requests-oauthlib==2.0.0.20260402",
    "ruff>=0.14.9",
    "types-pytz==2026.1.1.20260402",
    "types-pyyaml==6.0.12.20250915",
    "django-stubs-ext==6.0.2",
    "ty>=0.0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["glifestream"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
plugins = ["mypy_django_plugin.main"]
exclude = '(?x)^(run-.*|run/vrt-uv-cache/|run/vrt-venv/|run/vrt-home/)'

[[tool.mypy.overrides]]
module = ["workerpool", "feedparser", "atproto", "atproto_client.models.app.bsky.feed.defs"]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "glifestream.settings"

[tool.ruff.format]
quote-style = "single"

[tool.coverage.run]
source = ["glifestream"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "glifestream/settings*.py",
    "glifestream/settings_sample.py",
    "manage.py",
    "worker.py",
    "run/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
